--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.38.1",
+    "@supabase/supabase-js": "^1.35.7",
+    "axios": "^0.27.2",
+    "cookie": "^0.5.0",
+    "micro": "^9.4.1",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-player": "^2.11.0",
+    "stripe": "^10.11.0"
   },
   "devDependencies": {
     "eslint": "8.24.0",
